Fixed Authentication Error

--- a/app/views/books/index.erb
+++ b/app/views/books/index.erb
@@ -4,5 +4,5 @@
     <%= book.book_month %>
     <%end%>
         <br></br>
-    <a class="button" href="/books/new">Edit or Create Books</a>
+    <a class="button" href="/books/new">Create Books</a>
     <a class="button" href="/logout">Log Out</a>
