--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,22 +1,21 @@
 <h2>Here is the Book of the Month</h2>
-    <tr>
-        <td><%=@book.title%></td>
+        <h3><%=@book.title%></h3>
         <br></br>
-        <td><%=@book.author%></td>
+        <h3><%=@book.author%></h3>
         <br></br>
-        <td><%=@book.book_month%></td>
+        <h3><%=@book.book_month%></h3>
         <br></br>
-        <td><%=@book.genre%></td>
+        <h3><%=@book.genre%></h3>
         <br></br>
-        <td><%=@book.description%></td>
+        <h3><%=@book.description%></h3>
         <br>
     </tr>
-    <br></br>
+    <% if @book.user == current_user %>
     <a href="/books/<%=@book.id%>/edit">Edit</a>
     <form method="POST" action="/books/<%=@book.id%>">
-    <input type="hidden" name="_method" value="Delete">
-    <input type="submit" value="Delete Book" >
+    <input type="hidden" name="_method" value="Delete" />
+    <input type="submit" value="Delete Book" />
     </form>
-    <br>
+    <%end%>
     <a class="button" href="/books">Books</a>
     <a class="button" href="/logout">Log Out</a>
